[package]
name = "ntrip_caster"
version = "0.1.0"
edition = "2021"

[lib]
name = "ntrip_caster"
path = "src/lib.rs"

dependencies =
# 异步运行时
tokio = { version = "1.32", features = ["full"] }
tokio-uring = { version = "0.4", optional = true }
axum = "0.6"
notify = "5.0"
rlimit = { version = "0.9", optional = true }
# 高性能IO
tokio-uring = "0.4"
# 字节缓冲区管理
bytes = "1.4"
# 异步锁
tokio-sync = "0.1"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 配置解析
config = { version = "0.13", features = ["toml", "yaml"] }
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }
# 数据库客户端
etcd-client = "0.12"
rqlite = "0.4"
# UUID生成
uuid = { version = "1.4", features = ["v4", "serde"] }
# 时间处理
chrono = { version = "0.4", features = ["serde", "utc"] }
# 错误处理
thiserror = "1.0"
# 网络地址解析
addr2line = "0.21"

[features]
linux-optimizations = ["tokio-uring", "rlimit"]

[dev-dependencies]
tokio = { version = "1.32", features = ["test-util"] }
mockall = "0.11"